# rKV

./: .dockerignore  .git-commit-template  .gitignore  .pre-commit-config.yaml  BENCH.md  CONCEPTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: bench.yml
bench/data/: 16k.zst  1k.zst  1m.zst  8k.zst
deploy/helm/rkv/: Chart.yaml  values.yaml
deploy/helm/rkv/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: cluster.md  config.md  observability.md  replication.md  spec.md  storage.md
knot/: Cargo.toml  Dockerfile  README.md
knot/spec/: 01-overview.md  02-architecture.md  03-data-model.md  04-storage-mapping.md  05-indexing.md  06-schema-operations.md  07-deletion-cascade.md  08-traversal.md  09-temporal.md  10-engine-components.md  11-rust-api.md  12-error-types.md  13-http-api.md  14-cli-repl-v1.md  14-cli-repl.md  15-open-questions.md  README.md
knot/src/: lib.rs  main.rs
knot/src/engine/: backend.rs  cascade.rs  condition.rs  embedded.rs  error.rs  link.rs  metadata.rs  mod.rs  property.rs  query.rs  remote.rs  revision.rs  table.rs  traversal.rs
knot/src/repl/: executor.rs  mod.rs  parser.rs  text_cmd.rs
knot/src/server/: mod.rs
knot/src/server/routes/: batch.rs  graph.rs  links.rs  metadata.rs  mod.rs  namespaces.rs  nodes.rs  ui.rs
knot/src/server/routes/ui/: app.js  docs.html  index.html  openapi.yaml  style.css
knot/tests/: cascade_basic.rs  link_basic.rs  query_basic.rs  revision_basic.rs  table_basic.rs  traversal_basic.rs
rill/: BENCH.md  Cargo.toml  DOCS.md  Dockerfile  README.md
rill/src/: backend.rs  config.rs  lib.rs  main.rs  msgid.rs
rill/src/ui/: app.js  docs.html  index.html  openapi.yaml  style.css
rill/tests/: fuzz.rs
rkv/: CONCEPTS.md  Cargo.toml  README.md
rkv-ffi/: Cargo.toml
rkv-ffi/src/: lib.rs
rkv/docs/: cluster.md  operations.md  storage.md
rkv/src/: config_file.rs  lib.rs  main.rs
rkv/src/engine/: aol.rs  batch.rs  bloom.rs  cache.rs  checksum.rs  cluster.rs  crypto.rs  dump.rs  error.rs  filter.rs  io.rs  iterator.rs  key.rs  memtable.rs  merge_iter.rs  metrics.rs  mod.rs  namespace.rs  objects.rs  recovery.rs  repl_peer.rs  repl_receiver.rs  repl_sender.rs  replication.rs  revision.rs  ribbon.rs  sstable.rs  stats.rs  value.rs
rkv/src/server/: config.rs  error.rs  mod.rs  types.rs
rkv/src/server/middleware/: ip_filter.rs  mod.rs  shard_filter.rs
rkv/src/server/routes/: admin.rs  batch.rs  health.rs  keys.rs  mod.rs  namespaces.rs  revisions.rs  scan.rs  ui.rs
rkv/src/server/routes/ui/: app.js  docs.html  index.html  openapi.yaml  style.css
rkv/tests/: crash_recovery.rs  db_basic.rs  fuzz.rs  replication.rs
