[package]
name = "knot"
version = "0.1.0"
edition = "2021"
description = "Schema-free, graph-based, temporal database built on rKV"

[[bin]]
name = "knot"
path = "src/main.rs"

[dependencies]
rkv = { path = "../rkv" }
rmp-serde = "1"
rmpv = "1"
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
