[package]
name = "rill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rill"
path = "src/main.rs"

[lib]
name = "rill"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tower = "0.5"
