[package]
name = "rill"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rill"
path = "src/main.rs"

[lib]
name = "rill"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
rkv = { path = "../rkv" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
toml = "1.0.6"

[dev-dependencies]
tower = "0.5"
