[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rkv"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[lib]
name = "rkv"
path = "src/lib.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
dirs-sys = "0.5"
fast32 = "1.0.3"
fastrand = "2"
libc = "0.2"
lz4_flex = "0.11"
memmap2 = "0.9"
rpassword = "5"
sysinfo = "0.34"
rustyline = "17"
tempfile = "3"
thiserror = "2"
zstd = "0.13"
