[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rkv"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[lib]
name = "rkv"
path = "src/lib.rs"

[features]
default = []
server = ["dep:axum", "dep:tokio", "dep:serde", "dep:serde_json", "dep:tower", "dep:tower-http"]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
dirs-sys = "0.5"
fast32 = "1.0.3"
fastrand = "2"
libc = "0.2"
lz4_flex = "0.11"
memmap2 = "0.9"
rpassword = "5"
sysinfo = "0.34"
rustyline = "17"
tempfile = "3"
thiserror = "2"
zstd = "0.13"

# Server (optional — enabled by `server` feature)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors"], optional = true }
