[package]
name = "rkv"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rkv"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "bench_server"
path = "src/bin/bench_server.rs"
required-features = ["server"]

[[bin]]
name = "bench_compare"
path = "src/bin/bench_compare.rs"
required-features = ["bench-compare"]

[[bin]]
name = "bench_gen_data"
path = "src/bin/bench_gen_data.rs"

[lib]
name = "rkv"
path = "src/lib.rs"

[features]
default = []
server = ["dep:axum", "dep:tokio", "dep:serde_json", "dep:tower", "dep:tower-http", "dep:httpdate", "dep:http-body-util", "dep:tracing", "dep:tracing-subscriber"]
bench-compare = ["dep:redb", "dep:sled", "dep:fjall"]
bench-rocksdb = ["bench-compare", "dep:rocksdb"]
profiling = []

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
blake3 = "1"
clap = { version = "4.5", features = ["derive"] }
crc32c = "0.6"
dirs-sys = "0.5"
fast32 = "1.0.3"
fastrand = "2"
libc = "0.2"
lz4_flex = "0.13"
memmap2 = "0.9"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "1"
sysinfo = "0.38"
rustyline = "17"
tempfile = "3"
thiserror = "2"
zstd = "0.13"

# Server (optional — enabled by `server` feature)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"], optional = true }
httpdate = { version = "1", optional = true }
http-body-util = { version = "0.1", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Comparison benchmarks (optional — enabled by `bench-compare` feature)
redb = { version = "3", optional = true }
sled = { version = "0.34", optional = true }
fjall = { version = "3", optional = true }
rocksdb = { version = "0.24", optional = true }
